# Priority-Queue-Service

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/api/: add_url.rs  fetch_url.rs  mod.rs  retry_url.rs
src/config/: config.rs
src/models/: mod.rs  url_data.rs
src/services/: mod.rs  priority_queue_service.rs
src/utils/: time.rs
