[package]
name = "priority-queue-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.17", features = ["aio","connection-manager"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"